--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,12 @@
             </ul>
           </nav>
 
+          <nav class="cover-navigation cover-navigation--primary">
+            <ul class="navigation">
+              <li class="navigation__item"><a href="https://medium.com/@immadisairaj" title="link to medium blog" class="blog-button">Medium</a></li>
+            </ul>
+          </nav>
+
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
 
